added external folder

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@ src/ros/catkin_ws/.catkin_workspace
 src/ros/catkin_ws/build/
 src/ros/catkin_ws/devel/
 src/ros/catkin_ws/src/CMakeLists.txt
+src/external/PetriNetPlans/
+src/external/gradient_based_navigation/
 
