--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 *~
-src/ros/catkin_ws/.catkin_workspace
-src/ros/catkin_ws/build/
-src/ros/catkin_ws/devel/
-src/ros/catkin_ws/src/CMakeLists.txt
-src/external/gradient_based_navigation/
-src/ros/catkin_ws/src/gradient_based_navigation
-src/external/PetriNetPlans/
-src/ros/catkin_ws/src/PNPros
+software/ros/catkin_ws/.catkin_workspace
+software/ros/catkin_ws/build/
+software/ros/catkin_ws/devel/
+software/ros/catkin_ws/src/CMakeLists.txt
+software/external/gradient_based_navigation/
+software/ros/catkin_ws/src/gradient_based_navigation
+software/external/PetriNetPlans/
+software/ros/catkin_ws/src/PNPros
 
