added executable and objects to t21

--- a/software/ros/catkin_ws/src/t21_image_processing/package.xml
+++ b/software/ros/catkin_ws/src/t21_image_processing/package.xml
@@ -19,6 +19,7 @@
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
   <!-- Authors do not have to be maintianers, but could be -->
+  <author email="laurent.jeanpierre@unicaen.fr">Laurent Jeanpierre</author>
   <author email="hichem.sahli@etro.vub.ac.be">Hichem Sahli</author>
   <author email="frederic.jurie@unicaen.fr">Frederic Jurie</author>
   <author email="iocchi@dis.uniroma1.it">Luca Iocchi</author>
@@ -32,13 +33,14 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>shared</build_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
-
+  <run_depend>shared</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
