--- a/software/ros/catkin_ws/src/t22_situation_awareness/package.xml
+++ b/software/ros/catkin_ws/src/t22_situation_awareness/package.xml
@@ -5,7 +5,9 @@
   <description>Situation Awareness</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
-  <maintainer email="laurent.jeanpierre@unicaen.fr">jeanpierre</maintainer>
+  <maintainer email="hichem.sahli@etro.vub.ac.be">Hichem Sahli</maintainer>
+  <maintainer email="frederic.jurie@unicaen.fr">Frederic Jurie</maintainer>
+  <maintainer email="iocchi@dis.uniroma1.it">Luca Iocchi</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -21,18 +23,25 @@
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
   <!-- Authors do not have to be maintianers, but could be -->
   <author email="laurent.jeanpierre@unicaen.fr">Laurent Jeanpierre</author>
+  <author email="hichem.sahli@etro.vub.ac.be">Hichem Sahli</author>
+  <author email="frederic.jurie@unicaen.fr">Frederic Jurie</author>
+  <author email="iocchi@dis.uniroma1.it">Luca Iocchi</author>
 
   <!-- The *_depend tags are used to specify dependencies -->
   <!-- Dependencies can be catkin packages or system dependencies -->
   <buildtool_depend>catkin</buildtool_depend>
+
   <build_depend>message_generation</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>shared</build_depend>
+
   <run_depend>message_runtime</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>shared</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
