--- a/software/ros/catkin_ws/src/t21_image_processing/CMakeLists.txt
+++ b/software/ros/catkin_ws/src/t21_image_processing/CMakeLists.txt
@@ -111,7 +111,7 @@ add_executable(t21 src/T21.cpp src/main.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-# add_dependencies(t21_image_processing_node t21_image_processing_generate_messages_cpp)
+add_dependencies(t21 shared_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(t21
