correction of dependencies in t21 and t22, added t31 and t32 alpha versions

--- a/software/ros/catkin_ws/src/shared/CMakeLists.txt
+++ b/software/ros/catkin_ws/src/shared/CMakeLists.txt
@@ -6,7 +6,6 @@ project(shared)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   message_generation
-  message_runtime
   roscpp
   rospy
   std_msgs
@@ -86,7 +85,7 @@ generate_messages(
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES shared
-#  CATKIN_DEPENDS message_generation message_runtime roscpp rospy std_msgs
+  CATKIN_DEPENDS message_runtime roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
 
