--- a/software/ros/catkin_ws/src/t11_kb_modeling/CMakeLists.txt
+++ b/software/ros/catkin_ws/src/t11_kb_modeling/CMakeLists.txt
@@ -6,7 +6,6 @@ project(t11_kb_modeling)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   message_generation
-  message_runtime
   roscpp
   rospy
   std_msgs
@@ -46,11 +45,10 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+  FILES
+  Knowledge.msg
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -67,10 +65,10 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs
-# )
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+)
 
 ###################################
 ## catkin specific configuration ##
@@ -84,7 +82,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES t11_kb_modeling
-#  CATKIN_DEPENDS message_generation message_runtime roscpp rospy std_msgs
+  CATKIN_DEPENDS message_runtime roscpp rospy std_msgs shared
 #  DEPENDS system_lib
 )
 
@@ -99,22 +97,17 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
-## Declare a cpp library
-# add_library(t11_kb_modeling
-#   src/${PROJECT_NAME}/t11_kb_modeling.cpp
-# )
-
 ## Declare a cpp executable
-# add_executable(t11_kb_modeling_node src/t11_kb_modeling_node.cpp)
+add_executable(t11 src/T11.cpp src/main.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-# add_dependencies(t11_kb_modeling_node t11_kb_modeling_generate_messages_cpp)
+add_dependencies(t11 t11_kb_modeling_generate_messages_cpp shared_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(t11_kb_modeling_node
-#   ${catkin_LIBRARIES}
-# )
+target_link_libraries(t11
+  ${catkin_LIBRARIES}
+)
 
 #############
 ## Install ##
