--- a/software/ros/catkin_ws/src/t12_kb_reasoning/package.xml
+++ b/software/ros/catkin_ws/src/t12_kb_reasoning/package.xml
@@ -29,10 +29,16 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>shared</build_depend>
+  <build_depend>t11_kb_modeling</build_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>geometry_msgs</run_depend>
+  <run_depend>shared</run_depend>
+  <run_depend>t11_kb_modeling</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
