--- a/software/ros/catkin_ws/src/t41_robust_navigation/CMakeLists.txt
+++ b/software/ros/catkin_ws/src/t41_robust_navigation/CMakeLists.txt
@@ -6,10 +6,11 @@ project(t41_robust_navigation)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   message_generation
-  message_runtime
   roscpp
   rospy
   std_msgs
+  geometry_msgs
+  nav_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -53,11 +54,10 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+add_service_files(
+  FILES
+  GetPathLen.srv
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -67,10 +67,12 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs
-# )
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+  geometry_msgs
+  nav_msgs
+)
 
 ###################################
 ## catkin specific configuration ##
@@ -84,7 +86,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES t41_robust_navigation
-#  CATKIN_DEPENDS message_generation message_runtime roscpp rospy std_msgs
+  CATKIN_DEPENDS message_runtime roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
 
@@ -99,22 +101,17 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
-## Declare a cpp library
-# add_library(t41_robust_navigation
-#   src/${PROJECT_NAME}/t41_robust_navigation.cpp
-# )
-
 ## Declare a cpp executable
-# add_executable(t41_robust_navigation_node src/t41_robust_navigation_node.cpp)
+add_executable(t41 src/T41.cpp src/main.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-# add_dependencies(t41_robust_navigation_node t41_robust_navigation_generate_messages_cpp)
+add_dependencies(t41 t41_robust_navigation_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(t41_robust_navigation_node
-#   ${catkin_LIBRARIES}
-# )
+target_link_libraries(t41
+  ${catkin_LIBRARIES}
+)
 
 #############
 ## Install ##
