Added a mock module in T21 to get people location from stage and provide associated features

--- a/software/ros/catkin_ws/src/t21_image_processing/CMakeLists.txt
+++ b/software/ros/catkin_ws/src/t21_image_processing/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(catkin REQUIRED COMPONENTS
   sensor_msgs
   geometry_msgs
   shared
+  tf
 )
 
 ## System dependencies are found with CMake's conventions
@@ -86,7 +87,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES t21_image_processing
-CATKIN_DEPENDS message_runtime roscpp rospy std_msgs shared sensor_msgs geometry_msgs
+CATKIN_DEPENDS message_runtime roscpp rospy std_msgs shared
 #  DEPENDS system_lib
 )
 
@@ -108,14 +109,19 @@ include_directories(
 
 ## Declare a cpp executable
 add_executable(t21 src/T21.cpp src/main.cpp)
+add_executable(mockPeople src/mockPeople.cpp)
 
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-add_dependencies(t21 shared_generate_messages_cpp)
+#add_dependencies(t21 shared_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(t21
+  ${catkin_LIBRARIES}
+)
+
+target_link_libraries(mockPeople
   ${catkin_LIBRARIES}
 )
 
