added a mock-module for HRI. factored a few strings into a .H file in shared/include folder

--- a/software/ros/catkin_ws/src/t31_multimodal_hri/CMakeLists.txt
+++ b/software/ros/catkin_ws/src/t31_multimodal_hri/CMakeLists.txt
@@ -100,15 +100,16 @@ include_directories(
 
 ## Declare a cpp executable
 add_executable(t31 src/T31.cpp src/main.cpp)
+add_executable(mockHRI src/mockHRI.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-add_dependencies(t31 shared_generate_messages_cpp t31_generate_messages_cpp)
+add_dependencies(t31 t31_generate_messages_cpp)
+add_dependencies(mockHRI t31_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(t31
-  ${catkin_LIBRARIES}
-)
+target_link_libraries(t31 ${catkin_LIBRARIES} )
+target_link_libraries(mockHRI ${catkin_LIBRARIES} )
 
 #############
 ## Install ##
