--- a/software/ros/catkin_ws/src/t42_multi_robot_planning/CMakeLists.txt
+++ b/software/ros/catkin_ws/src/t42_multi_robot_planning/CMakeLists.txt
@@ -22,6 +22,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
 # catkin_python_setup()
 
+SET(CMAKE_BUILD_TYPE Debug)
+
 ################################################
 ## Declare ROS messages, services and actions ##
 ################################################
