cleaned up version with sites information moved to task 1.1 as it should have been

--- a/software/ros/catkin_ws/src/t21_image_processing/CMakeLists.txt
+++ b/software/ros/catkin_ws/src/t21_image_processing/CMakeLists.txt
@@ -114,16 +114,13 @@ add_executable(mockPeople src/mockPeople.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-#add_dependencies(t21 shared_generate_messages_cpp)
+add_dependencies(t21 ${catkin_EXPORTED_TARGETS})
+add_dependencies(mockPeople ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(t21
-  ${catkin_LIBRARIES}
-)
+target_link_libraries(t21 ${catkin_LIBRARIES} )
 
-target_link_libraries(mockPeople
-  ${catkin_LIBRARIES}
-)
+target_link_libraries(mockPeople ${catkin_LIBRARIES} )
 
 #############
 ## Install ##
