--- a/software/ros/catkin_ws/src/t41_robust_navigation/CMakeLists.txt
+++ b/software/ros/catkin_ws/src/t41_robust_navigation/CMakeLists.txt
@@ -47,11 +47,12 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+  FILES
+  StatePolicy.msg
+  Policy.msg
+  PolicyResult.msg
+)
 
 ## Generate services in the 'srv' folder
 add_service_files(
@@ -84,7 +85,7 @@ generate_messages(
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
+  INCLUDE_DIRS include
 #  LIBRARIES t41_robust_navigation
   CATKIN_DEPENDS message_runtime roscpp rospy std_msgs
 #  DEPENDS system_lib
@@ -96,7 +97,7 @@ catkin_package(
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
-# include_directories(include)
+include_directories(include)
 include_directories(
   ${catkin_INCLUDE_DIRS}
 )
@@ -109,9 +110,7 @@ add_executable(t41 src/T41.cpp src/main.cpp)
 add_dependencies(t41 t41_robust_navigation_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(t41
-  ${catkin_LIBRARIES}
-)
+target_link_libraries(t41 ${catkin_LIBRARIES} )
 
 #############
 ## Install ##
