--- a/software/ros/catkin_ws/src/t42_multi_robot_planning/package.xml
+++ b/software/ros/catkin_ws/src/t42_multi_robot_planning/package.xml
@@ -31,6 +31,7 @@
   <build_depend>shared</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>t12_kb_reasoning</build_depend>
+  <build_depend>t41_robust_navigation</build_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
@@ -38,6 +39,7 @@
   <run_depend>shared</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>t12_kb_reasoning</run_depend>
+  <run_depend>t41_robust_navigation</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
