--- a/software/ros/catkin_ws/src/t41_robust_navigation/package.xml
+++ b/software/ros/catkin_ws/src/t41_robust_navigation/package.xml
@@ -31,6 +31,7 @@
   <build_depend>shared</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
+  <build_depend>pnp_ros</build_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
@@ -38,6 +39,7 @@
   <run_depend>shared</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
+  <run_depend>pnp_ros</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
