--- a/software/ros/catkin_ws/src/t12_kb_reasoning/package.xml
+++ b/software/ros/catkin_ws/src/t12_kb_reasoning/package.xml
@@ -32,6 +32,7 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>shared</build_depend>
   <build_depend>t11_kb_modeling</build_depend>
+  <build_depend>t41_robust_navigation</build_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
@@ -39,6 +40,7 @@
   <run_depend>geometry_msgs</run_depend>
   <run_depend>shared</run_depend>
   <run_depend>t11_kb_modeling</run_depend>
+  <run_depend>t41_robust_navigation</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
