Finished parsing the PRU xml file. split SVU and NEXT into several entries

--- a/software/ros/catkin_ws/src/t42_multi_robot_planning/CMakeLists.txt
+++ b/software/ros/catkin_ws/src/t42_multi_robot_planning/CMakeLists.txt
@@ -115,7 +115,7 @@ include_directories(
 add_executable(t42 src/T42.cpp src/main.cpp)
 add_executable(pruPlanner src/T42.cpp src/PRUplanner.cpp)
 
-add_executable(pruReader src/PRUplus.cpp)
+add_executable(pruReader src/PRUplus.cpp src/PRUprint.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
