--- a/software/ros/catkin_ws/src/t42_multi_robot_planning/src/makefile
+++ b/software/ros/catkin_ws/src/t42_multi_robot_planning/src/makefile
@@ -1,2 +1,8 @@
-all:
-	g++ -g PRUplus.cpp `pkg-config --cflags --libs libxml++-2.6`
+all: PRUplus.o PRUprint.o
+	g++ -g $^ `pkg-config --libs libxml++-2.6`
+
+%.o : %.cpp
+	g++ -c -g -MP -MMD $< `pkg-config --cflags libxml++-2.6`
+
+-include "*.d"
+
