PRU compilation: building states from outcomes

--- a/software/ros/catkin_ws/src/t42_multi_robot_planning/src/makefile
+++ b/software/ros/catkin_ws/src/t42_multi_robot_planning/src/makefile
@@ -1,8 +1,8 @@
-all: PRUplus.o PRUprint.o PRUtoMDP.o
+all: PRUplus.o PRUprint.o MDP.o
 	g++ -g $^ `pkg-config --libs libxml++-2.6`
 
 %.o : %.cpp
 	g++ -c -g -MP -MMD $< `pkg-config --cflags libxml++-2.6`
 
--include "*.d"
+-include $(wildcard *.d)
 
