--- a/software/ros/catkin_ws/src/t42_multi_robot_planning/src/makefile
+++ b/software/ros/catkin_ws/src/t42_multi_robot_planning/src/makefile
@@ -1,5 +1,5 @@
 all: PRUplus.o PRUprint.o MDP.o
-	g++ -g $^ `pkg-config --libs libxml++-2.6`
+	g++ -g $^ `pkg-config --libs libxml++-2.6` -lboost_regex
 
 %.o : %.cpp
 	g++ -c -g -MP -MMD $< `pkg-config --cflags libxml++-2.6`
