--- a/software/ros/catkin_ws/src/t41_robust_navigation/CMakeLists.txt
+++ b/software/ros/catkin_ws/src/t41_robust_navigation/CMakeLists.txt
@@ -104,10 +104,13 @@ include_directories(include)
 include_directories(
   ${pnp_ros_INCLUDE_DIRS}
   ${catkin_INCLUDE_DIRS}
+  $ENV{PNP_INCLUDE}/../../PNPgen/src
 )
+link_directories($ENV{PNP_LIB}/../../PNPgen/lib)
 
 ## Declare a cpp executable
-add_executable(t41 src/T41.cpp src/pnpgenerator.cpp src/main.cpp)
+add_executable(t41 src/T41.cpp src/main.cpp)
+target_link_libraries(t41 genpnp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
@@ -116,7 +119,9 @@ add_dependencies(t41 ${catkin_EXPORTED_TARGETS})
 ## Specify libraries to link a library or executable target against
 target_link_libraries(t41 ${catkin_LIBRARIES} )
 
-add_executable(test_genPNP src/test_genPNP.cpp src/pnpgenerator.cpp)
+add_executable(test_genPNP src/test_genPNP.cpp)
+target_link_libraries(test_genPNP genpnp)
+
 
 add_executable(t41_pnpas src/T41PNPAS.cpp src/T41Actions.cpp)
 target_link_libraries(t41_pnpas ${pnp_ros_LIBRARIES} ${catkin_LIBRARIES})
