done cleaning code

--- a/software/ros/catkin_ws/src/t42_multi_robot_planning/src/makefile
+++ b/software/ros/catkin_ws/src/t42_multi_robot_planning/src/makefile
@@ -1,8 +1,11 @@
+FLAGS=-Wextra -g -fstack-check -O0
+#FLAGS+= -fprofile-arcs -ftest-coverage
+
 all: PRUplus.o PRUprint.o MDP.o PRU2MDP.o PRU2MDPprogress.o testPRU2MDP.o
-	g++ -Wextra -g -fstack-check $^ `pkg-config --libs libxml++-2.6` -lboost_regex
+	g++ ${FLAGS} $^ `pkg-config --libs libxml++-2.6` -lboost_regex
 
 %.o : %.cpp
-	g++ -Wextra -c -g -MP -MMD -fstack-check $< `pkg-config --cflags libxml++-2.6`
+	g++ ${FLAGS} -c -MP -MMD $< `pkg-config --cflags libxml++-2.6`
 
 -include $(wildcard *.d)
 
