added constraints to pru.xml. TODO: parsing them

--- a/software/ros/catkin_ws/src/t42_multi_robot_planning/src/makefile
+++ b/software/ros/catkin_ws/src/t42_multi_robot_planning/src/makefile
@@ -1,7 +1,7 @@
 FLAGS=-Wextra -g -fstack-check -O0
 #FLAGS+= -fprofile-arcs -ftest-coverage
 
-all: PRUplus.o PRUprint.o MDP.o PRU2MDP.o PRU2MDPprogress.o PRU2MDPstateStore.o MDPsolve.o testPRU2MDP.o
+all: PRUplus.o PRUprint.o PRUconstraint.o MDP.o PRU2MDP.o PRU2MDPprogress.o PRU2MDPstateStore.o MDPsolve.o testPRU2MDP.o
 	g++ ${FLAGS} $^ `pkg-config --libs libxml++-2.6` -lboost_regex
 
 %.o : %.cpp
