modified scripts and PNPs

--- a/.gitignore
+++ b/.gitignore
@@ -8,13 +8,18 @@ software/ros/catkin_ws/.catkin_workspace
 software/ros/catkin_ws/*build/
 software/ros/catkin_ws/devel/
 software/ros/catkin_ws/src/CMakeLists.txt*
-software/external/gradient_based_navigation/
+software/external/*
+software/ros/catkin_ws/src/diago_apps
+software/ros/catkin_ws/src/diago_setup
+software/ros/catkin_ws/src/dis_segway
+software/ros/catkin_ws/src/glocalizer
 software/ros/catkin_ws/src/gradient_based_navigation
-software/external/PetriNetPlans/
+software/ros/catkin_ws/src/laser_analysis
 software/ros/catkin_ws/src/pnp_msgs
 software/ros/catkin_ws/src/pnp_ros
-software/external/stage_environments/
+software/ros/catkin_ws/src/rococo_navigation
 software/ros/catkin_ws/src/stage_environments
+software/ros/catkin_ws/src/tcp_interface
 doc/**/*.pdf
 doc/**/*.dvi
 doc/**/*.aux
